--- a/persons/templates/persons/home2.html
+++ b/persons/templates/persons/home2.html
@@ -6,9 +6,6 @@
   <h1> Every Person is Valuable to OhLocal</h1>
   <hr/>
   <br/>
-  {% if error %}
-  {{error}}
-  {% endif %}
-  <h5> Please provide your response by clicking on survey:)<br/> Ignore if done! </h5>
+  <h5>Sit Back and Relax!! We have Received your response:)</h5>
   </div>
 {% endblock %}
